--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,8 @@
     }
   ],
   "env": {
-    "NEXT_PUBLIC_SITE_URL": "https://fengyunyu.de"
+    "NEXT_PUBLIC_SITE_URL": "https://fengyunyu.de",
+    "GOOGLE_SCHOLAR_LINK": "https://scholar.google.com/citations?user=7bPHV-AAAAAJ&hl=en",
+    "LINKEDIN_LINK": ""
   }
 } 
